[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/board/RotatingMover.gd" type="Script" id=1]
[ext_resource path="res://sprites/rotating_mover_circle.png" type="Texture" id=2]
[ext_resource path="res://sprites/rotating_mover_arrow.png" type="Texture" id=3]

[node name="RotatingMover" type="Node2D" groups=[
"board_object",
"mover",
"rotating_mover",
]]
script = ExtResource( 1 )

[node name="Sprite_Circle" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 4
region_rect = Rect2( 0, 0, 16, 16 )

[node name="Sprite_Arrow" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
vframes = 4
hframes = 2
region_rect = Rect2( 0, 0, 16, 16 )
